examples/anthos-manifests/before/02-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payments-ingress
  namespace: payments
  annotations:
    kubernetes.io/ingress.class: gce
    networking.gke.io/managed-certificates: pay-cert
    cloud.google.com/backend-config: '{"default":"payments-bc"}'
spec:
  rules:
    - host: pay.example.com
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: payment-api
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: payment-api
  namespace: payments
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"default":"payments-bc"}'
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: payment-api
